--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -3,8 +3,14 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Chess</title>
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script>
 
+	//Load the top navbar
+	function navbar(){
+		  $("#nav-bar").load("nav.html");
+	}
+	
 	function callLoginServlet() {
 		document.getElementById('invalid_login').innerHTML = "";
 	    var xmlHttp = new XMLHttpRequest();
@@ -26,7 +32,10 @@
 	}
 </script>
 </head>
-<body>
+<body onload="navbar()">
+
+	<div id="nav-bar"></div>
+	
 <h1>Login</h1>
 	<form name="login" onsubmit="callLoginServlet();return false">
 		<p>Username:</p>
