fix navbar margin

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -33,25 +33,25 @@
 	
 	
 </script>
+
+<style>
+	body { 
+	  margin:0px; 
+	  padding:0px;
+	}
+</style>
 </head>
 
 <body onload="navbar()">
 
 	<div id="nav-bar"></div>
 	
-	<a href="leaderboards.html">Leaderboards</a>
-	||
-	<a href="play.html">Play</a>
-	||
-	<a href="profile.html" id="profile" onclick="fillProfile();">Profile</a>
-	||
-	<a href="login.html">Login</a>
-	||
-	<a href="" onclick="logout();">Logout</a>
+	<div id="description">
+		<h1>Online Chess:</h1>
+		<p>
+			Welcome to online chess. Click the "PLAY" button at the top to start finding a game.
+		</p>
 	
-	<br><br>
-	
-	<button id="tttttt" onclick="fillLoginButton();">Has cookie?</button>
-	<span id="tmp"></span>
+	</div>
 </body>
 </html>
