--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -51,7 +51,15 @@
 		}
 	
 	</script>
+	
+<style>
+	body { 
+	  margin:0px; 
+	  padding:0px;
+	}
+</style>
 </head>
+
 <body onload="navbar()">
 
 	<div id="nav-bar"></div>
