--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -31,6 +31,13 @@
 	    xmlHttp.send();
 	}
 </script>
+
+<style>
+	body { 
+	  margin:0px; 
+	  padding:0px;
+	}
+</style>
 </head>
 <body onload="navbar()">
 
