Edit: color theme

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,6 +38,15 @@
 	body { 
 	  margin:0px; 
 	  padding:0px;
+	  background-color: #1A1A1D;
+	}
+	
+	h1 {
+	   color: #FFF; 
+	}
+	
+	p {
+	   color: #FFF;
 	}
 </style>
 </head>
