--- a/WebContent/leaderboards.html
+++ b/WebContent/leaderboards.html
@@ -31,7 +31,21 @@
 	body { 
 	  margin:0px; 
 	  padding:0px;
+	  background-color: #1A1A1D;
 	}
+	
+	h1 {
+	   color: #FFF; 
+	}
+	
+	p {
+	   color: #FFF;
+	}
+	
+	#content {
+	   color: #FFF;
+	}
+	
 </style>
 </head>
 
