--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -120,15 +120,18 @@
 	body { 
 	  margin:0px; 
 	  padding:0px;
+	  background-color: #1A1A1D;
 	}
+	
+	
 	
 	p {
 		font-weight: bold;
-		color: dark-grey;
+		color: white;
 	}
 	
 	h1 {
-		color: black;
+		color: #bd2847;
 	}
 		
 	
@@ -148,6 +151,7 @@
 	input[type=password],
 	input[type=email]{
     	width: 90%;
+    	background: #e3dcde;
 	}
 	
 	#leftsplit {
