--- a/WebContent/nav.html
+++ b/WebContent/nav.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <script>
 	
 	//Change the 'login' to reflect if the user is signed in or not
@@ -88,7 +89,7 @@
 	  margin: 0;
 	  padding: 15px;
 	  overflow: hidden;
-	  background-color: #b8ae95;
+	  background-color: #ad0739;
       border-bottom-left-radius:30px;
    	  border-bottom-right-radius:30px;
 	}
@@ -133,7 +134,7 @@
 	
 	
 	<nav>	
-		<div id="right-logo"><a href="index.html">Chess</a></div>
+		<div id="right-logo"><a href="index.html"><i class='fas fa-chess-rook' style='font-size:30px'></i></a></div>
 		<span id="Play"></span>
 		<div id="topoptions">
 			<span id="Home"><a href="index.html">Home</a></span>
