--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -56,7 +56,26 @@
 	body { 
 	  margin:0px; 
 	  padding:0px;
+	  background-color: #1A1A1D;
 	}
+		
+	h1 {
+	   color: #FFF; 
+	}
+	
+	p {
+	   color: #FFF;
+	}
+	
+	#content {
+	   color: #FFF;
+	}
+	
+		
+	#name {
+	   color: #FFF;
+	}
+	
 </style>
 </head>
 
