--- a/WebContent/nav.html
+++ b/WebContent/nav.html
@@ -74,9 +74,10 @@
 	function showPlayContent() {
 		if(checkLoginStatus() != "none") {
 			// I (Nick) am changing this line to redirect to localhost 3000
-	    	document.getElementById("Play").innerHTML=  "<a style=\"color: #000; text-decoration: none;\"href=\"http://localhost:3000?name="+checkLoginStatus()+"\">PLAY (" + checkLoginStatus() + ")</a>";
+			// I (Sasoun) am changing this line to redirect to build/index.html
+	    	document.getElementById("Play").innerHTML=  "<a style=\"color: #000; text-decoration: none;\"href=\"build/index.html?name="+checkLoginStatus()+"\">PLAY (" + checkLoginStatus() + ")</a>";
 		} else {
-			document.getElementById("Play").innerHTML= "<a style=\"color: #000; text-decoration: none;\" href=\"http://localhost:3000?name="+ "Guest User"+"\">PLAY (" + "Guest" + ")</a>";
+			document.getElementById("Play").innerHTML= "<a style=\"color: #000; text-decoration: none;\" href=\"build/index.html?name="+ "Guest User"+"\">PLAY (" + "Guest" + ")</a>";
 		}
 	}
 	
