--- a/WebContent/nav.html
+++ b/WebContent/nav.html
@@ -77,7 +77,7 @@
 			// I (Sasoun) am changing this line to redirect to build/index.html
 	    	document.getElementById("Play").innerHTML=  "<a style=\"color: #000; text-decoration: none;\"href=\"build/index.html?name="+checkLoginStatus()+"\">PLAY (" + checkLoginStatus() + ")</a>";
 		} else {
-			document.getElementById("Play").innerHTML= "<a style=\"color: #000; text-decoration: none;\" href=\"build/index.html?name="+ "Guest User"+"\">PLAY (" + "Guest" + ")</a>";
+			document.getElementById("Play").innerHTML= "<a style=\"color: #000; text-decoration: none;\" href=\"build/index.html?name="+ "Guest"+"\">PLAY (" + "Guest" + ")</a>";
 		}
 	}
 	
