--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -152,6 +152,8 @@
 	input[type=email]{
     	width: 90%;
     	background: #e3dcde;
+    	border-radius: 7px;
+    	border-color: black;
 	}
 	
 	#leftsplit {
