formula minor change

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -158,10 +158,10 @@
 			
 			
 			<!-- 	<p style="font-size: 18px;">\(P(W_{p_1}) =\frac{1}{1 + 10^{ \frac{p_1 - p_2}{400} }} \)</p>-->
-				<p style="font-size: 18px;">\(P(W_{p_2}) =\frac{1}{1 + 10^{ \frac{p_2 - p_1}{400} }} \)</p>
+				<p style="font-size: 18px;">\(P(W_{p_2}) =\frac{1}{1 + 10^{ \frac{p_1 - p_2}{400} }} \)</p>
 				
 				<p style="font-size: 18px;">player 2 elo gain \( = 100 * (1 - P(W_{p_2}))   \)</p>
-				<p style="font-size: 18px;">player 1 player elo loss \( = 100 * (P(W_{p_2}) - 1) \) </p>
+				<p style="font-size: 18px;">player 1 player elo loss \( = -100 * (1 - P(W_{p_2})) \) </p>
 				
 				<!-- 
 				<p style="font-size: 15px;line-height: 2px;">Where:</p>
