--- a/WebContent/leaderboards.html
+++ b/WebContent/leaderboards.html
@@ -54,7 +54,7 @@
 
 	<div id="nav-bar"></div>
 	<script>getLeaderboards()</script>
-	<div id="content"></div>
+	<div id="content" style="width: 100%"></div>
 
 </body>
 </html>
