Edit: leaderboards css

--- a/WebContent/leaderboards.html
+++ b/WebContent/leaderboards.html
@@ -45,6 +45,16 @@
 	
 	#content {
 	   color: #FFF;
+	   font-size: 24px;
+	}
+	
+	th {
+		padding: 10px;
+	}
+	
+	table { 
+    	border-spacing: 2px;
+   		border-collapse: separate;
 	}
 	
 </style>
@@ -53,6 +63,7 @@
 <body onload="navbar()">
 
 	<div id="nav-bar"></div>
+	<br><br>
 	<script>getLeaderboards()</script>
 	<div id="content" style="width: 100%"></div>
 
