profile now has css styling

--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -47,7 +47,7 @@
 		
 		
 		function getName() {
-			document.getElementById('name').innerHTML = "<h2>" + findGetParameter("name").toUpperCase(); + "<h2>";
+			document.getElementById('name').innerHTML = "<h2 style=\"text-align:center\">" + findGetParameter("name").toUpperCase(); + "</h2>";
 		}
 	
 	</script>
