Fixed end of game result bug

--- a/WebContent/leaderboards.html
+++ b/WebContent/leaderboards.html
@@ -96,6 +96,7 @@
 		width: 100%;
 		height: 100%;
 		margin-bottom: 100px;
+  		border-radius: 1000px;
 	}
 	
 	
@@ -125,7 +126,7 @@
 	<br><br><br><br><br><br>
 	
 	<script>getLeaderboards()</script>
-	<div id="content" class = "content"></div>
+	<div id= "content" class = "content"></div>
 
 </body>
 </html>
