--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -63,14 +63,31 @@
 	   color: #FFF; 
 	}
 	
+	h2 {
+	font-size: 40px;
+	   color: #FFF; 
+	}
+	
+	
 	p {
+	   font-size: 24px;
 	   color: #FFF;
 	}
 	
 	#content {
 	   color: #FFF;
+	   font-size: 18px;
 	}
 	
+	th {
+		padding: 8px;
+	}
+	
+	table { 
+    	border-spacing: 2px;
+   		border-collapse: separate;
+	}
+		
 		
 	#name {
 	   color: #FFF;
