fixed the profile button bug

--- a/WebContent/nav.html
+++ b/WebContent/nav.html
@@ -57,7 +57,7 @@
 			document.getElementById("custom-selected").innerHTML = "#Home {"+css+"}";
 		} else if(filename == "login.html") {
 			document.getElementById("custom-selected").innerHTML = "#Login {"+css+"}";
-		} else if(filename == "profile.html") {
+		} else if(filename == "profile.html" && username != "none") {
 			document.getElementById("custom-selected").innerHTML = "#Profile {"+css+"}";
 		} else if(filename == "leaderboards.html") {
 			document.getElementById("custom-selected").innerHTML = "#Leaderboards {"+css+"}";
