changed search color to red

--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -142,9 +142,9 @@
 	<div id="content"></div>
 	<br><br><br>
 	<div id="searchbar" class="search" style="width: 250px; margin: 0 auto;">      
-   		<input name="searchbar" type="text" class="searchTerm" placeholder="  Search player">
-		<button type="button" onclick="findPlayer();" class="searchButton">
-			<i class="fa fa-search"></i>
+   		<input name="searchbar" style="border-top-color:#ad0739;border-bottom-color:#ad0739;border-left-color:#ad0739;" type="text" class="searchTerm" placeholder="  Search player">
+		<button style="border-top-color:#ad0739;border-bottom-color:#ad0739;border-right-color:#ad0739;" type="button" onclick="findPlayer();" class="searchButton">
+			<i style="color:#ad0739" class="fa fa-search"></i>
 		</button>
 	</div>
 	<script>getName()</script>
